--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
 
   <!-- Import Resume Modal -->
-  <div id="resumeContainer"></div>
+  <!-- <div id="resumeContainer"></div> -->
 
   <!-- Import Chatbot -->
   <div id="chatbotContainer"></div>
