resume model changes

--- a/resumeModal.html
+++ b/resumeModal.html
@@ -9,7 +9,7 @@
         Unlock my journey, projects, and expertise. Take a peek at my Legion portfolio!
       </p>
       <div class="text-center">
-        <a href="resume.pdf" target="_blank" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-full text-lg font-semibold hover:bg-indigo-700 dark:hover:bg-indigo-500 shadow-lg transition transform hover:scale-105">
+        <a href="assets/resume.pdf" target="_blank" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-full text-lg font-semibold hover:bg-indigo-700 dark:hover:bg-indigo-500 shadow-lg transition transform hover:scale-105">
            Access My Vault
         </a>
       </div>
