--- a/sections/timeline.html
+++ b/sections/timeline.html
@@ -7,7 +7,8 @@
 
   <div class="max-w-5xl mx-auto">
     <h2 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-center text-indigo-600 mb-16 animate-fadeIn">
-      Formal & Professional</h2>
+      Formal & Professional
+    </h2>
 
     <!-- Timeline Container -->
     <div class="relative">
@@ -17,10 +18,10 @@
       <!-- Item 1 -->
       <div class="mb-16 flex justify-start relative animate-fadeIn">
         <div class="w-1/2 pr-8 text-right">
-          <h3 class="text-xl font-semibold text-indigo-600 dark:text-indigo-400">Software Developer @HandletechLabs</h3>
-          <time class="block mb-2 text-sm text-gray-500">2023 – Present</time>
+          <h3 class="text-xl font-semibold text-indigo-600 dark:text-indigo-400">Laravel Developer @ Swipewire Technologies</h3>
+          <time class="block mb-2 text-sm text-gray-500">Aug 2023 – Present</time>
           <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-            Developing dynamic, scalable E-commerce web apps using React.js, Laravel PHP, MySQL, and JavaScript frameworks.
+            Building and maintaining scalable Laravel web applications, integrating APIs, optimizing MySQL queries, and ensuring security and performance.
           </p>
         </div>
         <div class="absolute left-1/2 top-0 transform -translate-x-1/2">
@@ -31,10 +32,10 @@
       <!-- Item 2 -->
       <div class="mb-16 flex justify-end relative animate-fadeIn delay-150">
         <div class="w-1/2 pl-8 text-left">
-          <h3 class="text-xl font-semibold text-purple-600 dark:text-purple-400">PHP Programmer @SocialBytes</h3>
-          <time class="block mb-2 text-sm text-gray-500">2021 – 2023</time>
+          <h3 class="text-xl font-semibold text-purple-600 dark:text-purple-400">PHP Developer @ SocialBytes Technologies</h3>
+          <time class="block mb-2 text-sm text-gray-500">Apr 2021 – Jul 2023</time>
           <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-            Developed Health and Education websites using Laravel PHP, MySQL, and JavaScript frameworks, and integrated Audit Tally API for educational institutes.
+            Developed dynamic web applications with PHP and Laravel, optimized SQL queries, and implemented secure authentication and API integrations.
           </p>
         </div>
         <div class="absolute left-1/2 top-0 transform -translate-x-1/2">
@@ -45,10 +46,10 @@
       <!-- Item 3 -->
       <div class="mb-16 flex justify-start relative animate-fadeIn delay-300">
         <div class="w-1/2 pr-8 text-right">
-          <h3 class="text-xl font-semibold text-pink-600 dark:text-pink-400">Bachelor of Information Science</h3>
+          <h3 class="text-xl font-semibold text-pink-600 dark:text-pink-400">B.E. in Information Science & Engineering</h3>
           <time class="block mb-2 text-sm text-gray-500">2016 – 2020</time>
           <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-            Graduated with honors. Specialized in software engineering, databases, and system design.
+            Sambhram Institute of Technology, Bengaluru (VTU). Specialized in software engineering, databases, and system design.
           </p>
         </div>
         <div class="absolute left-1/2 top-0 transform -translate-x-1/2">
@@ -59,23 +60,3 @@
     </div>
   </div>
 </section>
-
-<!-- Animations -->
-<style>
-  /* Fade-in animation */
-  @keyframes fadeIn {
-    0% { opacity: 0; transform: translateY(20px); }
-    100% { opacity: 1; transform: translateY(0); }
-  }
-  .animate-fadeIn { animation: fadeIn 0.8s ease forwards; }
-  .delay-150 { animation-delay: 0.15s; }
-  .delay-300 { animation-delay: 0.3s; }
-  .delay-500 { animation-delay: 0.5s; }
-
-  /* Slow pulse for floating shapes */
-  @keyframes pulse-slow {
-    0%, 100% { transform: scale(1); opacity: 0.3; }
-    50% { transform: scale(1.2); opacity: 0.5; }
-  }
-  .animate-pulse-slow { animation: pulse-slow 6s infinite; }
-</style>
