--- a/sections/testimonials.html
+++ b/sections/testimonials.html
@@ -9,50 +9,75 @@
   <div class="overflow-hidden relative">
     <div class="flex animate-loop-scroll space-x-6">
 
-      <!-- Testimonials set (duplicate this block for smooth infinite loop) -->
+      <!-- Testimonials set -->
       <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <p class="italic">“A dedicated developer who always delivers high-quality work.”</p>
+        <img src="https://i.pravatar.cc/100?img=12" alt="Chethan Evil Das" class="w-16 h-16 rounded-full mx-auto border-4 border-indigo-300 shadow-md">
+        <p class="italic mt-4">“A dedicated developer who always delivers high-quality work.”</p>
         <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Chethan Evil Das (HR Manager @SocialBytes)</div>
       </div>
 
       <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <p class="italic">“Very strong in backend development and database optimization.”</p>
+        <img src="https://i.pravatar.cc/100?img=12" alt="Ajay" class="w-16 h-16 rounded-full mx-auto border-4 border-purple-300 shadow-md">
+        <p class="italic mt-4">“Very strong in backend development and database optimization.”</p>
         <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Ajay (Team Lead @SocialBytes)</div>
       </div>
 
       <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <p class="italic">“Professional, reliable, and highly skilled developer.”</p>
+        <img src="https://i.pravatar.cc/100?img=12" alt="Manoj" class="w-16 h-16 rounded-full mx-auto border-4 border-pink-300 shadow-md">
+        <p class="italic mt-4">“Professional, reliable, and highly skilled developer.”</p>
         <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Manoj (Client @IntelliSpace)</div>
       </div>
 
       <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <p class="italic">“Excellent communication and timely delivery.”</p>
+        <img src="https://i.pravatar.cc/100?img=12" alt="Girish" class="w-16 h-16 rounded-full mx-auto border-4 border-green-300 shadow-md">
+        <p class="italic mt-4">“Excellent communication and timely delivery.”</p>
         <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Girish (Team Lead @SocialBytes)</div>
       </div>
       <!-- /Testimonials set -->
 
       <!-- Duplicate set for seamless looping -->
-      <!-- Repeat the same 4 testimonials here -->
+      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
+        <img src="https://i.pravatar.cc/100?img=12" alt="Chethan Evil Das" class="w-16 h-16 rounded-full mx-auto border-4 border-indigo-300 shadow-md">
+        <p class="italic mt-4">“A dedicated developer who always delivers high-quality work.”</p>
+        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Chethan Evil Das (HR Manager @SocialBytes)</div>
+      </div>
+
+      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
+        <img src="https://i.pravatar.cc/100?img=12" alt="Ajay" class="w-16 h-16 rounded-full mx-auto border-4 border-purple-300 shadow-md">
+        <p class="italic mt-4">“Very strong in backend development and database optimization.”</p>
+        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Ajay (Team Lead @SocialBytes)</div>
+      </div>
+
+      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
+        <img src="https://i.pravatar.cc/100?img=12" alt="Manoj" class="w-16 h-16 rounded-full mx-auto border-4 border-pink-300 shadow-md">
+        <p class="italic mt-4">“Professional, reliable, and highly skilled developer.”</p>
+        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Manoj (Client @IntelliSpace)</div>
+      </div>
+
+      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
+        <img src="https://i.pravatar.cc/100?img=12" alt="Girish" class="w-16 h-16 rounded-full mx-auto border-4 border-green-300 shadow-md">
+        <p class="italic mt-4">“Excellent communication and timely delivery.”</p>
+        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Girish (Team Lead @SocialBytes)</div>
+      </div>
     </div>
   </div>
 </section>
 
 <style>
-/* Shared Animations */
+/* Animations */
 @keyframes fadeIn {0%{opacity:0;transform:translateY(20px);}100%{opacity:1;transform:translateY(0);}}
 .animate-fadeIn { animation: fadeIn 0.8s ease forwards; }
 
 @keyframes pulse-slow {0%,100%{transform:scale(1);opacity:0.3;}50%{transform:scale(1.2);opacity:0.5;}}
 .animate-pulse-slow { animation: pulse-slow 6s infinite; }
 
-/* Loop scroll animation */
 @keyframes loop-scroll {
   0% { transform: translateX(0); }
   100% { transform: translateX(-50%); }
 }
 .animate-loop-scroll {
   display: flex;
-  animation: loop-scroll 20s linear infinite;
+  animation: loop-scroll 25s linear infinite;
   width: max-content;
 }
 
