--- a/index.html
+++ b/index.html
@@ -1,78 +1,83 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Legion</title>
 
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script> tailwind.config = { darkMode: 'class' };</script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 transition-colors duration-500">
+<body class="bg-light text-dark">
 
   <!-- Loader -->
-  <div id="loader" class="fixed inset-0 flex items-center justify-center bg-white dark:bg-gray-900">
-    <h1 class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 animate-pulse">Legion</h1>
+  <div id="loader" class="position-fixed top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-white">
+    <h1 class="display-3 fw-bold text-gradient animate-pulse">Legion</h1>
   </div>
 
-  <div class="flex flex-col min-h-screen">
+  <div class="d-flex flex-column min-vh-100">
 
     <!-- Header -->
-    <header class="sticky top-0 z-50 bg-white/70 dark:bg-gray-900/70 backdrop-blur-md shadow-md">
-      <div class="max-w-6xl mx-auto flex justify-between items-center px-6 py-4">
+    <header class="sticky-top bg-white bg-opacity-75 shadow-sm backdrop-blur">
+      <div class="container d-flex justify-content-between align-items-center py-3">
         <!-- Logo -->
-        <div class="text-2xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-purple-600">
+        <div class="fs-3 fw-bold text-gradient">
           Suman K S
         </div>
 
         <!-- Desktop Nav -->
-        <nav class="hidden md:flex gap-6 text-sm font-medium">
-          <a href="#hero" class="hover:text-indigo-500 dark:hover:text-indigo-400">Home</a>
-          <a href="#about" class="hover:text-indigo-500 dark:hover:text-indigo-400">About</a>
-          <a href="#skills" class="hover:text-indigo-500 dark:hover:text-indigo-400">Skills</a>
-          <a href="#projects" class="hover:text-indigo-500 dark:hover:text-indigo-400">Projects</a>
-          <a href="#contact" class="hover:text-indigo-500 dark:hover:text-indigo-400">Contact</a>
+        <nav class="d-none d-md-flex gap-3 fw-medium">
+          <a href="#hero" class="nav-link">Home</a>
+          <a href="#about" class="nav-link">About</a>
+          <a href="#skills" class="nav-link">Skills</a>
+          <a href="#projects" class="nav-link">Projects</a>
+          <a href="#contact" class="nav-link">Contact</a>
         </nav>
 
         <!-- Mobile Menu Button -->
-        <button id="menuBtn" class="md:hidden text-2xl text-gray-700 dark:text-gray-200 focus:outline-none">
+        <button class="btn d-md-none fs-3" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu">
           ☰
         </button>
       </div>
 
       <!-- Mobile Nav -->
-      <div id="mobileMenu" class="hidden flex-col px-6 pb-4 space-y-3 md:hidden bg-white/90 dark:bg-gray-900/90">
-        <a href="#hero" class="block hover:text-indigo-500 dark:hover:text-indigo-400">Home</a>
-        <a href="#about" class="block hover:text-indigo-500 dark:hover:text-indigo-400">About</a>
-        <a href="#skills" class="block hover:text-indigo-500 dark:hover:text-indigo-400">Skills</a>
-        <a href="#projects" class="block hover:text-indigo-500 dark:hover:text-indigo-400">Projects</a>
-        <a href="#contact" class="block hover:text-indigo-500 dark:hover:text-indigo-400">Contact</a>
+      <div id="mobileMenu" class="collapse bg-white bg-opacity-90 px-4 pb-3">
+        <a href="#hero" class="d-block py-2">Home</a>
+        <a href="#about" class="d-block py-2">About</a>
+        <a href="#skills" class="d-block py-2">Skills</a>
+        <a href="#projects" class="d-block py-2">Projects</a>
+        <a href="#contact" class="d-block py-2">Contact</a>
       </div>
     </header>
 
     <!-- Main content -->
-    <main id="content" class="flex-1 px-6 py-12 space-y-16 max-w-6xl mx-auto">
-
+    <main id="content" class="flex-grow-1 container py-5">
+      <!-- Add your sections here -->
     </main>
 
     <!-- Footer -->
-    <footer class="bg-white/70 dark:bg-gray-900/70 backdrop-blur-md text-gray-500 dark:text-gray-400 text-center text-sm py-6">
+    <footer class="bg-white bg-opacity-75 text-center text-muted py-3">
       © <span id="year"></span> Suman K S · Built with ❤️ & Legion
     </footer>
   </div>
 
   <!-- Resume Modal -->
-  <div id="resumeModal">
-    <div>
-      <button id="closeModal">&times;</button>
-      <h2 class="text-2xl font-bold mb-4">My Resume</h2>
-      <p class="text-gray-700 dark:text-gray-300">This is where resume content goes.</p>
+  <div id="resumeModal" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content rounded-4 shadow">
+        <div class="modal-header">
+          <h5 class="modal-title">My Resume</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <p>This is where resume content goes.</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -80,20 +85,10 @@
   <div id="chatbotContainer"></div>
 
   <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/resumeModal.js"></script>
   <script src="js/chatbot.js"></script>
-
-  <script>
-    // Mobile Menu Toggle
-    const menuBtn = document.getElementById("menuBtn");
-    const mobileMenu = document.getElementById("mobileMenu");
-
-    menuBtn.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
-
-  </script>
 </body>
 </html>
