--- a/sections/hero.html
+++ b/sections/hero.html
@@ -1,62 +1,151 @@
-<section id="hero" class="relative min-h-screen flex items-center justify-center bg-gradient-to-b from-gray-50 to-gray-100 dark:from-gray-900 dark:to-gray-800 overflow-hidden px-6">
-  
-  <!-- Decorative Glow Shapes -->
-  <div class="absolute -top-32 left-10 w-72 h-72 bg-indigo-400/30 rounded-full blur-3xl animate-pulse-slow"></div>
-  <div class="absolute bottom-0 right-10 w-96 h-96 bg-purple-500/30 rounded-full blur-3xl animate-pulse-slow"></div>
-
-  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center z-10">
-    
-    <!-- Text Content -->
-    <div class="space-y-6 animate-fadeIn">
-      <h1 class="text-5xl sm:text-6xl font-extrabold leading-tight">
-        Hi 👋, I'm 
-        <span class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">
-          Suman K S
-        </span>
-      </h1>
-      <p class="text-lg sm:text-xl text-gray-700 dark:text-gray-300 max-w-lg">
-        Backend Developer · PHP | Laravel | MySQL | REST APIs
-      </p>
-      <div class="flex flex-wrap gap-4">
-        <a href="#projects" 
-           class="px-6 py-3 rounded-2xl bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-semibold shadow-xl hover:scale-110 transition-transform">
-          🚀 View Projects
-        </a>
-        <a href="#contact" 
-           class="px-6 py-3 rounded-2xl border border-indigo-500 text-indigo-600 dark:text-indigo-400 dark:border-indigo-400 shadow hover:bg-indigo-50 dark:hover:bg-gray-800 transition-colors">
-          📩 Contact Me
-        </a>
-      </div>
-    </div>
-
-    <!-- Hero Image / Branding -->
-    <div class="flex justify-center animate-fadeIn delay-150">
-      <div class="relative w-64 h-64 rounded-3xl bg-white/10 dark:bg-black/20 backdrop-blur-md border border-white/20 shadow-2xl flex items-center justify-center hover:scale-105 transition-transform">
-        <h1 class="text-4xl sm:text-5xl font-extrabold tracking-wide bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent animate-pulse">
-          Legion
+<!-- Hero Section -->
+<section id="hero" class="d-flex align-items-center min-vh-100 position-relative overflow-hidden">
+  <div class="container">
+    <div class="row align-items-center text-center text-lg-start">
+      
+      <!-- Text Content -->
+      <div class="col-lg-6 mb-5 mb-lg-0 animate-fadeIn">
+        <h1 class="display-4 fw-bold mb-3">
+          Hi 👋, I'm 
+          <span class="text-gradient">Suman K S</span>
         </h1>
-        <div class="absolute -top-4 -right-4 w-16 h-16 bg-gradient-to-tr from-pink-500 to-yellow-400 rounded-full blur-lg opacity-70"></div>
-        <div class="absolute -bottom-6 -left-6 w-20 h-20 bg-gradient-to-tr from-indigo-400 to-purple-600 rounded-full blur-lg opacity-70"></div>
+        <p class="lead text-muted mb-4">
+          Backend Developer · PHP | Laravel | MySQL | REST APIs
+        </p>
+        <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start">
+          <a href="#projects" class="btn btn-gradient px-4 py-2">
+            🚀 View Projects
+          </a>
+          <a href="#contact" class="btn btn-outline-gradient px-4 py-2">
+            📩 Contact Me
+          </a>
+        </div>
       </div>
+
+      <!-- Branding / Hero Graphic -->
+      <div class="col-lg-6 animate-fadeIn delay-150">
+        <div class="d-flex justify-content-center">
+          <div class="hero-box position-relative d-flex align-items-center justify-content-center rounded-4 shadow-lg">
+            <h1 class="legion-text">Legion</h1>
+            <!-- Floating Glow Orbs -->
+            <div class="hero-circle circle-sm top-end gradient-indigo"></div>
+            <div class="hero-circle circle-md bottom-start gradient-pink"></div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
 
+<!-- Hero Styles -->
 <style>
-@layer utilities {
-  /* Fade-in animation */
-  @keyframes fadeIn {
-    0% { opacity: 0; transform: translateY(20px); }
-    100% { opacity: 1; transform: translateY(0); }
-  }
-  .animate-fadeIn { animation: fadeIn 0.9s ease forwards; }
-  .delay-150 { animation-delay: 0.3s; }
+/* Gradient text */
+.text-gradient {
+  background: linear-gradient(to right, #6366F1, #8B5CF6, #EC4899);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-  /* Slow floating pulse */
-  @keyframes pulse-slow {
-    0%, 100% { transform: scale(1); opacity: 0.4; }
-    50% { transform: scale(1.15); opacity: 0.7; }
+/* Buttons */
+.btn-gradient {
+  background: linear-gradient(to right, #6366F1, #8B5CF6);
+  color: #fff;
+  border-radius: 2rem;
+  font-weight: 600;
+  transition: transform 0.3s ease;
+}
+.btn-gradient:hover {
+  transform: scale(1.05);
+}
+
+.btn-outline-gradient {
+  border: 2px solid #6366F1;
+  color: #6366F1;
+  border-radius: 2rem;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+.btn-outline-gradient:hover {
+  background: #6366F1;
+  color: #fff;
+}
+
+/* Hero Box */
+.hero-box {
+  width: 280px;
+  height: 280px;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.2);
+}
+@media (min-width: 768px) {
+  .hero-box {
+    width: 320px;
+    height: 320px;
   }
-  .animate-pulse-slow { animation: pulse-slow 8s infinite; }
+}
+
+/* Legion Branding Text */
+.legion-text {
+  font-size: 2.5rem;
+  font-weight: 800;
+  letter-spacing: 2px;
+  background: linear-gradient(to right, #6366F1, #8B5CF6, #EC4899);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: pulseText 2s infinite;
+}
+@media (min-width: 768px) {
+  .legion-text {
+    font-size: 3rem;
+  }
+}
+
+@keyframes pulseText {
+  0%, 100% { opacity: 1; transform: scale(1); }
+  50% { opacity: 0.85; transform: scale(1.05); }
+}
+
+/* Floating Glow Orbs */
+.hero-circle {
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(30px);
+  opacity: 0.7;
+}
+.circle-sm {
+  width: 70px;
+  height: 70px;
+}
+.circle-md {
+  width: 100px;
+  height: 100px;
+}
+.top-end {
+  top: -20px;
+  right: -20px;
+}
+.bottom-start {
+  bottom: -25px;
+  left: -25px;
+}
+.gradient-indigo {
+  background: radial-gradient(circle, #6366F1, transparent);
+}
+.gradient-pink {
+  background: radial-gradient(circle, #EC4899, transparent);
+}
+
+/* Animations */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+.animate-fadeIn {
+  animation: fadeIn 1s ease forwards;
+}
+.delay-150 {
+  animation-delay: 0.3s;
 }
 </style>
