--- a/sections/journey.html
+++ b/sections/journey.html
@@ -1,100 +1,95 @@
 <!-- Journey Timeline Section -->
-<section id="journey" class="relative py-20 px-6 bg-gradient-to-b from-gray-100 to-gray-200 dark:from-gray-800 dark:to-gray-900 overflow-hidden">
-
+<section id="journey" class="position-relative py-5 px-3 bg-light overflow-hidden">
+  
   <!-- Floating Neon Shapes -->
-  <div class="absolute -top-24 -left-16 w-72 h-72 bg-indigo-400/20 rounded-full filter blur-3xl animate-pulse-slow"></div>
-  <div class="absolute -bottom-32 -right-20 w-80 h-80 bg-purple-500/20 rounded-full filter blur-3xl animate-pulse-slow"></div>
+  <div class="position-absolute top-0 start-0 translate-middle rounded-circle pulse-slow" style="width: 18rem; height: 18rem; background: rgba(99,102,241,0.2); filter: blur(80px);"></div>
+  <div class="position-absolute bottom-0 end-0 translate-middle rounded-circle pulse-slow" style="width: 20rem; height: 20rem; background: rgba(139,92,246,0.2); filter: blur(80px);"></div>
 
-  <div class="max-w-6xl mx-auto relative">
-
+  <div class="container position-relative">
+    
     <!-- Section Title -->
-    <h2 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-indigo-600 mb-16 text-center animate-fadeIn">
+    <h2 class="fw-bold text-primary text-center mb-5 fadeIn" style="font-size: 2.5rem;">
       Growth Story
     </h2>
 
     <!-- Timeline Container -->
-    <div class="overflow-hidden relative">
-      <div class="timeline-loop flex gap-12">
+    <div class="overflow-hidden position-relative">
+      <div class="timeline-loop d-flex gap-5">
 
         <!-- Timeline Item 1 -->
-        <div class="timeline-item flex flex-col items-center text-center animate-fadeIn">
-          <div class="w-12 h-12 rounded-full flex items-center justify-center text-white text-2xl shadow-lg bg-indigo-500">💻</div>
-          <h3 class="mt-4 text-lg font-semibold text-gray-800 dark:text-gray-200">2021</h3>
-          <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Started with <span class="font-medium text-indigo-500">PHP & MySQL</span>, building small apps and learning backend fundamentals.</p>
+        <div class="timeline-item d-flex flex-column align-items-center text-center fadeIn">
+          <div class="rounded-circle d-flex align-items-center justify-content-center text-white fs-3 shadow bg-primary" style="width: 3rem; height: 3rem;">💻</div>
+          <h3 class="mt-3 fs-6 fw-semibold text-dark">2021</h3>
+          <p class="mt-2 small text-muted">Started with <span class="fw-medium text-primary">PHP & MySQL</span>, building small apps and learning backend fundamentals.</p>
         </div>
 
         <!-- Timeline Item 2 -->
-        <div class="timeline-item flex flex-col items-center text-center animate-fadeIn delay-150">
-          <div class="w-12 h-12 rounded-full flex items-center justify-center text-white text-2xl shadow-lg bg-purple-500">🚀</div>
-          <h3 class="mt-4 text-lg font-semibold text-gray-800 dark:text-gray-200">2022</h3>
-          <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Learned <span class="font-medium text-indigo-500">Laravel & REST APIs</span>, building scalable solutions.</p>
+        <div class="timeline-item d-flex flex-column align-items-center text-center fadeIn delay-150">
+          <div class="rounded-circle d-flex align-items-center justify-content-center text-white fs-3 shadow bg-purple" style="width: 3rem; height: 3rem; background:#8b5cf6;">🚀</div>
+          <h3 class="mt-3 fs-6 fw-semibold text-dark">2022</h3>
+          <p class="mt-2 small text-muted">Learned <span class="fw-medium text-primary">Laravel & REST APIs</span>, building scalable solutions.</p>
         </div>
 
         <!-- Timeline Item 3 -->
-        <div class="timeline-item flex flex-col items-center text-center animate-fadeIn delay-300">
-          <div class="w-12 h-12 rounded-full flex items-center justify-center text-white text-2xl shadow-lg bg-indigo-500">⚡</div>
-          <h3 class="mt-4 text-lg font-semibold text-gray-800 dark:text-gray-200">2023</h3>
-          <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Built <span class="font-medium text-indigo-500">real-world apps</span> with auth, payments & cloud deployment.</p>
+        <div class="timeline-item d-flex flex-column align-items-center text-center fadeIn delay-300">
+          <div class="rounded-circle d-flex align-items-center justify-content-center text-white fs-3 shadow bg-primary" style="width: 3rem; height: 3rem;">⚡</div>
+          <h3 class="mt-3 fs-6 fw-semibold text-dark">2023</h3>
+          <p class="mt-2 small text-muted">Built <span class="fw-medium text-primary">real-world apps</span> with auth, payments & cloud deployment.</p>
         </div>
 
         <!-- Timeline Item 4 -->
-        <div class="timeline-item flex flex-col items-center text-center animate-fadeIn delay-500">
-          <div class="w-12 h-12 rounded-full flex items-center justify-center text-white text-2xl shadow-lg bg-purple-500">🏆</div>
-          <h3 class="mt-4 text-lg font-semibold text-gray-800 dark:text-gray-200">2023</h3>
-          <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Led teams, mentored juniors & built <span class="font-medium text-indigo-500">enterprise apps</span>.</p>
+        <div class="timeline-item d-flex flex-column align-items-center text-center fadeIn delay-500">
+          <div class="rounded-circle d-flex align-items-center justify-content-center text-white fs-3 shadow bg-purple" style="width: 3rem; height: 3rem; background:#8b5cf6;">🏆</div>
+          <h3 class="mt-3 fs-6 fw-semibold text-dark">2023</h3>
+          <p class="mt-2 small text-muted">Led teams, mentored juniors & built <span class="fw-medium text-primary">enterprise apps</span>.</p>
         </div>
 
         <!-- Timeline Item 5 -->
-        <div class="timeline-item flex flex-col items-center text-center animate-fadeIn delay-700">
-          <div class="w-12 h-12 rounded-full flex items-center justify-center text-white text-2xl shadow-lg bg-indigo-500">🌟</div>
-          <h3 class="mt-4 text-lg font-semibold text-gray-800 dark:text-gray-200">2024+</h3>
-          <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Exploring <span class="font-medium text-indigo-500">Express.js & React</span> for modern full-stack development.</p>
+        <div class="timeline-item d-flex flex-column align-items-center text-center fadeIn delay-700">
+          <div class="rounded-circle d-flex align-items-center justify-content-center text-white fs-3 shadow bg-primary" style="width: 3rem; height: 3rem;">🌟</div>
+          <h3 class="mt-3 fs-6 fw-semibold text-dark">2024+</h3>
+          <p class="mt-2 small text-muted">Exploring <span class="fw-medium text-primary">Express.js & React</span> for modern full-stack development.</p>
         </div>
-
-      
 
       </div>
     </div>
   </div>
 </section>
 
+<!-- Custom CSS -->
 <style>
 /* Fade-in animation */
 @keyframes fadeIn {
-  0% { opacity: 0; transform: translateY(20px); }
-  100% { opacity: 1; transform: translateY(0); }
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
 }
-.animate-fadeIn { animation: fadeIn 0.8s ease forwards; }
-
-/* Pulse animation for floating shapes */
-@keyframes pulse-slow {
-  0%,100% { transform: scale(1); opacity: 0.3; }
-  50% { transform: scale(1.2); opacity: 0.5; }
-}
-.animate-pulse-slow { animation: pulse-slow 6s infinite; }
-
-/* Timeline loop animation */
-@keyframes slideLoop {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); } /* move half of container width */
-}
-.timeline-loop {
-  display: flex;
-  gap: 4rem;
-  animation: slideLoop 20s linear infinite;
-  width: max-content;
-}
-
-/* Timeline item styling */
-.timeline-item {
-  min-width: 220px;
-}
-
-/* Animation delays for items */
+.fadeIn { animation: fadeIn 0.8s ease forwards; }
 .delay-150 { animation-delay: 0.15s; }
 .delay-300 { animation-delay: 0.3s; }
 .delay-500 { animation-delay: 0.5s; }
 .delay-700 { animation-delay: 0.7s; }
 
+/* Pulse floating shapes */
+@keyframes pulse-slow {
+  0%, 100% { transform: scale(1); opacity: 0.3; }
+  50% { transform: scale(1.2); opacity: 0.5; }
+}
+.pulse-slow { animation: pulse-slow 6s infinite; }
 
+/* Timeline sliding loop */
+@keyframes slideLoop {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+.timeline-loop {
+  display: flex;
+  gap: 2.5rem;
+  animation: slideLoop 20s linear infinite;
+  width: max-content;
+}
+
+/* Timeline item */
+.timeline-item {
+  min-width: 220px;
+}
 </style>
