--- a/sections/timeline.html
+++ b/sections/timeline.html
@@ -1,62 +1,62 @@
 <!-- Timeline Section -->
-<section id="timeline" aria-label="Timeline" class="relative py-20 px-6 bg-gradient-to-b from-gray-50 to-gray-100 dark:from-gray-900 dark:to-gray-800 overflow-hidden">
-  
-  <!-- Floating accent shapes -->
-  <div class="absolute -top-32 -left-24 w-72 h-72 bg-indigo-400/20 rounded-full blur-3xl animate-pulse-slow"></div>
-  <div class="absolute -bottom-32 -right-24 w-96 h-96 bg-purple-400/20 rounded-full blur-3xl animate-pulse-slow"></div>
-
-  <div class="max-w-5xl mx-auto">
-    <h2 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-center text-indigo-600 mb-16 animate-fadeIn">
+<section id="timeline" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="fw-bold text-center text-primary mb-5" style="font-size:2.5rem;">
       Formal & Professional
     </h2>
 
-    <!-- Timeline Container -->
-    <div class="relative">
-      <!-- vertical line -->
-      <div class="absolute left-1/2 top-0 h-full w-1 bg-indigo-500 dark:bg-indigo-400 transform -translate-x-1/2"></div>
+    <div class="timeline-horizontal d-flex flex-wrap justify-content-center">
 
       <!-- Item 1 -->
-      <div class="mb-16 flex justify-start relative animate-fadeIn">
-        <div class="w-1/2 pr-8 text-right">
-          <h3 class="text-xl font-semibold text-indigo-600 dark:text-indigo-400">Laravel Developer @ Swipewire Technologies</h3>
-          <time class="block mb-2 text-sm text-gray-500">Aug 2023 – Present</time>
-          <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-            Building and maintaining scalable Laravel web applications, integrating APIs, optimizing MySQL queries, and ensuring security and performance.
-          </p>
-        </div>
-        <div class="absolute left-1/2 top-0 transform -translate-x-1/2">
-          <span class="flex items-center justify-center w-6 h-6 bg-indigo-500 rounded-full ring-8 ring-gray-50 dark:ring-gray-900"></span>
-        </div>
+      <div class="timeline-card shadow-sm p-4 m-3 rounded-4 border-top border-4 border-primary">
+        <h3 class="fs-5 fw-semibold text-primary mb-1">Laravel Developer</h3>
+        <small class="text-muted d-block mb-2">Swipewire Technologies<br>Aug 2023 – Present</small>
+        <p class="text-secondary mb-0">
+          Building scalable Laravel apps, integrating APIs, optimizing MySQL queries, ensuring performance & security.
+        </p>
       </div>
 
       <!-- Item 2 -->
-      <div class="mb-16 flex justify-end relative animate-fadeIn delay-150">
-        <div class="w-1/2 pl-8 text-left">
-          <h3 class="text-xl font-semibold text-purple-600 dark:text-purple-400">PHP Developer @ SocialBytes Technologies</h3>
-          <time class="block mb-2 text-sm text-gray-500">Apr 2021 – Jul 2023</time>
-          <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-            Developed dynamic web applications with PHP and Laravel, optimized SQL queries, and implemented secure authentication and API integrations.
-          </p>
-        </div>
-        <div class="absolute left-1/2 top-0 transform -translate-x-1/2">
-          <span class="flex items-center justify-center w-6 h-6 bg-purple-500 rounded-full ring-8 ring-gray-50 dark:ring-gray-900"></span>
-        </div>
+      <div class="timeline-card shadow-sm p-4 m-3 rounded-4 border-top border-4 border-purple">
+        <h3 class="fs-5 fw-semibold text-purple mb-1">PHP Developer</h3>
+        <small class="text-muted d-block mb-2">SocialBytes Technologies<br>Apr 2021 – Jul 2023</small>
+        <p class="text-secondary mb-0">
+          Developed web apps with PHP & Laravel, optimized SQL queries, built authentication & API integrations.
+        </p>
       </div>
 
       <!-- Item 3 -->
-      <div class="mb-16 flex justify-start relative animate-fadeIn delay-300">
-        <div class="w-1/2 pr-8 text-right">
-          <h3 class="text-xl font-semibold text-pink-600 dark:text-pink-400">B.E. in Information Science & Engineering</h3>
-          <time class="block mb-2 text-sm text-gray-500">2016 – 2020</time>
-          <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-            Sambhram Institute of Technology, Bengaluru (VTU). Specialized in software engineering, databases, and system design.
-          </p>
-        </div>
-        <div class="absolute left-1/2 top-0 transform -translate-x-1/2">
-          <span class="flex items-center justify-center w-6 h-6 bg-pink-500 rounded-full ring-8 ring-gray-50 dark:ring-gray-900"></span>
-        </div>
+      <div class="timeline-card shadow-sm p-4 m-3 rounded-4 border-top border-4 border-danger">
+        <h3 class="fs-5 fw-semibold text-danger mb-1">B.E. in ISE</h3>
+        <small class="text-muted d-block mb-2">Sambhram Institute of Technology<br>2016 – 2020</small>
+        <p class="text-secondary mb-0">
+          Specialized in software engineering, databases, and system design at VTU, Bengaluru.
+        </p>
       </div>
 
     </div>
   </div>
 </section>
+
+<!-- Custom CSS -->
+<style>
+/* Horizontal scroll on small devices */
+.timeline-horizontal {
+  gap: 1rem;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  padding-bottom: 1rem;
+}
+.timeline-card {
+  flex: 0 0 300px;
+  scroll-snap-align: start;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.timeline-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
+/* Custom colors */
+.text-purple { color: #8b5cf6; }
+.border-purple { border-color: #8b5cf6 !important; }
+</style>
