--- a/chatbot.html
+++ b/chatbot.html
@@ -1,29 +1,57 @@
 <!-- Chatbot Floating Button -->
 <div id="chatbot" 
-  class="fixed bottom-6 right-6 w-14 h-14 bg-purple-600 text-white rounded-full shadow-lg flex items-center justify-center cursor-pointer z-50 hover:scale-110 transition-transform">
+     class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center shadow-lg"
+     style="position: fixed; bottom: 1.5rem; right: 1.5rem; width: 56px; height: 56px; z-index: 1050; cursor: pointer; font-size: 1.5rem; transition: transform 0.2s;">
   🤖
 </div>
 
 <!-- Chatbot Window -->
 <div id="chatbotWindow" 
-  class="fixed bottom-24 right-6 w-80 max-w-sm bg-white dark:bg-gray-800 rounded-2xl shadow-2xl overflow-hidden transform scale-95 opacity-0 pointer-events-none transition-all duration-300 z-50 flex flex-col">
-  
+     class="card shadow-lg"
+     style="position: fixed; bottom: 6rem; right: 1.5rem; width: 320px; max-width: 100%; border-radius: 1rem; transform: scale(0.95); opacity: 0; pointer-events: none; transition: all 0.3s ease; z-index: 1050;">
+
   <!-- Header -->
-  <div class="bg-purple-500 text-white px-4 py-3 flex justify-between items-center rounded-t-2xl">
-    <h3 class="font-semibold">Legion AI</h3>
-    <button id="closeChat" class="font-bold hover:text-gray-200">&times;</button>
+  <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center" style="border-top-left-radius: 1rem; border-top-right-radius: 1rem;">
+    <h6 class="mb-0">Legion AI</h6>
+    <button id="closeChat" type="button" class="btn-close btn-close-white"></button>
   </div>
-  
+
   <!-- Chat Content -->
-  <div id="chatContent" class="flex-1 p-3 flex flex-col gap-2 overflow-y-auto bg-gray-50 dark:bg-gray-900"></div>
-  
+  <div id="chatContent" class="card-body p-3" style="max-height: 300px; overflow-y: auto; background: #f8f9fa;">
+  </div>
+
   <!-- Input -->
-  <div class="flex flex-col p-3 gap-2 border-t border-gray-200 dark:border-gray-700 bg-gray-100 dark:bg-gray-800 rounded-b-2xl">
-    <input id="chatInput" type="text" placeholder="Ask me anything..."
-      class="w-full px-3 py-2 rounded-full border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 focus:outline-none focus:ring-2 focus:ring-purple-400"/>
-    <button id="sendChat" 
-      class="w-full bg-purple-500 hover:bg-purple-400 text-white px-4 py-2 rounded-full font-semibold transition">
-      Send
-    </button>
+  <div class="p-3 border-top" style="background: #f1f3f5; border-bottom-left-radius: 1rem; border-bottom-right-radius: 1rem;">
+    <input id="chatInput" type="text" class="form-control mb-2" placeholder="Ask me anything...">
+    <button id="sendChat" class="btn btn-primary w-100 fw-semibold">Send</button>
   </div>
 </div>
+
+<style>
+/* Hover effect for chatbot button */
+#chatbot:hover {
+  transform: scale(1.1);
+}
+
+/* Open state for chatbot window */
+#chatbotWindow.open {
+  transform: scale(1);
+  opacity: 1;
+  pointer-events: auto;
+}
+</style>
+
+<script>
+// Toggle chatbot open/close
+const chatbotBtn = document.getElementById("chatbot");
+const chatbotWindow = document.getElementById("chatbotWindow");
+const closeChat = document.getElementById("closeChat");
+
+chatbotBtn.addEventListener("click", () => {
+  chatbotWindow.classList.toggle("open");
+});
+
+closeChat.addEventListener("click", () => {
+  chatbotWindow.classList.remove("open");
+});
+</script>
