--- a/sections/contact.html
+++ b/sections/contact.html
@@ -1,123 +1,113 @@
-<section id="contact" class="relative py-20 px-6 bg-gradient-to-b from-gray-50 to-gray-100 dark:from-gray-900 dark:to-gray-800 overflow-hidden">
+<section id="contact" class="py-5 px-3 position-relative bg-light overflow-hidden">
   <!-- Background shapes -->
-  <div class="absolute -top-32 -left-32 w-72 h-72 bg-indigo-400/20 rounded-full filter blur-3xl animate-float"></div>
-  <div class="absolute -bottom-32 -right-32 w-96 h-96 bg-purple-400/20 rounded-full filter blur-3xl animate-float"></div>
+  <div class="position-absolute top-0 start-0 translate-middle bg-primary rounded-circle opacity-25 blur" style="width: 18rem; height: 18rem; animation: float 6s ease-in-out infinite;"></div>
+  <div class="position-absolute bottom-0 end-0 translate-middle bg-purple rounded-circle opacity-25 blur" style="width: 24rem; height: 24rem; animation: float 7s ease-in-out infinite;"></div>
 
   <!-- Title -->
-  <h2 class="text-5xl font-extrabold text-indigo-600 text-center mb-16 animate-fadeInUp">
+  <h2 class="display-5 fw-bold text-primary text-center mb-5 animate-fadeInUp">
     Stay Connected
   </h2>
 
   <!-- Social Icons -->
-  <div class="flex justify-center gap-6 mb-12">
+  <div class="d-flex justify-content-center gap-3 mb-5">
     <!-- Twitter -->
     <a href="https://x.com/SumanKS81840" target="_blank" aria-label="Twitter" title="Twitter" class="social-icon">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53A4.48 4.48 0 0 0 12 7v1A10.66 10.66 0 0 1 3 4s-4 9 5 13c-2.5 1.5-7 2-7 2 9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"/>
-      </svg>
+      <i class="bi bi-twitter"></i>
     </a>
     <!-- LinkedIn -->
     <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" aria-label="LinkedIn" title="LinkedIn" class="social-icon">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M4 3a2 2 0 1 0 0 4 2 2 0 0 0 0-4zM2 7h4v14H2zm7 0h4v2h.1c.6-1.1 2-2.3 4.3-2.3C21 6.7 22 10 22 14v7h-4v-6.4c0-1.5-.5-2.6-1.8-2.6-1.5 0-2.2 1-2.2 2.6V21H10z"/>
-      </svg>
+      <i class="bi bi-linkedin"></i>
     </a>
     <!-- GitHub -->
     <a href="https://github.com/backendlegion91" target="_blank" aria-label="GitHub" title="GitHub" class="social-icon">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.2 11.39.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.3-1.3-1.7-1.3-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.6-.8 1.6-.8.9-1.5 2.3-1 2.9-.8.1-.7.3-1 .5-1.3-2.7-.3-5.5-1.4-5.5-6.2 0-1.4.5-2.6 1.2-3.6-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.4 1.3a11.8 11.8 0 0 1 6.2 0c2.4-1.6 3.4-1.3 3.4-1.3.6 1.6.2 2.8.1 3.1.8 1 1.2 2.2 1.2 3.6 0 4.8-2.8 5.9-5.5 6.2.3.3.6.8.6 1.6v2.3c0 .3.2.7.8.6C20.6 21.8 24 17.3 24 12c0-6.63-5.37-12-12-12z"/>
-      </svg>
+      <i class="bi bi-github"></i>
     </a>
   </div>
 
   <!-- Contact Options & Map -->
-  <div class="flex flex-col lg:flex-row gap-12 max-w-6xl mx-auto">
-    
-    <!-- Contact Options -->
-    <div class="flex-1 flex flex-col gap-6 backdrop-blur-md bg-white/30 dark:bg-gray-900/30 p-8 rounded-3xl shadow-xl border border-white/20 dark:border-gray-700/20 animate-fadeInUp delay-[0.2s]">
-      <h3 class="text-2xl font-bold text-indigo-600 mb-4">Get in Touch</h3>
+  <div class="container">
+    <div class="row g-4">
+      
+      <!-- Contact Options -->
+      <div class="col-lg-6">
+        <div class="p-4 rounded-4 shadow bg-white animate-fadeInUp">
+          <h3 class="h4 fw-bold text-primary mb-4">Get in Touch</h3>
 
-      <!-- Email -->
-      <a href="mailto:backendlegion91@gamil.com" class="flex items-center gap-3 bg-gradient-to-r from-indigo-500 to-purple-600 text-white px-6 py-3 rounded-xl shadow-lg hover:scale-105 transition">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M2 4a2 2 0 012-2h16a2 2 0 012 2v1l-10 7L2 5V4zm0 3.75V20a2 2 0 002 2h16a2 2 0 002-2V7.75l-10 7-10-7z"/>
-        </svg>
-        <span>Email Me</span>
-      </a>
+          <!-- Email -->
+          <a href="mailto:backendlegion91@gmail.com" class="btn d-flex align-items-center gap-2 mb-3 btn-gradient">
+            <i class="bi bi-envelope-fill"></i> Email Me
+          </a>
 
-      <!-- WhatsApp -->
-      <a href="https://wa.me/7996049769" target="_blank" class="flex items-center gap-3 bg-green-500 text-white px-6 py-3 rounded-xl shadow-lg hover:scale-105 transition">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M20 4.5A11.5 11.5 0 0012 .5 11.5 11.5 0 00.5 12c0 2 .5 3.8 1.5 5.5L0 24l6.7-1.7c1.5.8 3.2 1.2 5.3 1.2A11.5 11.5 0 0024 12c0-3.2-1.2-6.2-3.5-8.5zM12 21c-1.6 0-3-.4-4.3-1.2l-.3-.1-4 .9.9-3.9-.2-.3A9.1 9.1 0 013 12c0-5 4-9 9-9s9 4 9 9-4 9-9 9zm5.1-6.7c-.3-.2-1.7-.9-2-1-.3-.1-.5-.2-.7.2s-.8 1-.9 1.1c-.2.2-.3.2-.6.1-1.6-.8-2.7-1.4-3.7-3.2-.3-.5.3-.5.9-1.7.1-.2 0-.4 0-.6-.1-.2-.7-1.7-1-2.3-.2-.6-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.2 1.2-1.2 3s1.2 3.5 1.4 3.7c.2.3 2.3 3.5 5.6 4.9.8.4 1.4.6 1.9.8.8.3 1.6.2 2.2.1.7-.1 1.7-.7 2-1.4.3-.7.3-1.3.2-1.4-.1-.2-.3-.3-.6-.5z"/>
-        </svg>
-        <span>WhatsApp</span>
-      </a>
+          <!-- WhatsApp -->
+          <a href="https://wa.me/7996049769" target="_blank" class="btn d-flex align-items-center gap-2 mb-3 btn-success text-white">
+            <i class="bi bi-whatsapp"></i> WhatsApp
+          </a>
 
-      <!-- Phone -->
-      <a href="tel:+7996049769" class="flex items-center gap-3 bg-blue-500 text-white px-6 py-3 rounded-xl shadow-lg hover:scale-105 transition">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M6.6 10.8a15.5 15.5 0 006.6 6.6l2.2-2.2c.3-.3.7-.4 1.1-.2 1.2.5 2.5.8 3.8.8.6 0 1 .4 1 1V21c0 .6-.4 1-1 1C10.6 22 2 13.4 2 3c0-.6.4-1 1-1h3.2c.6 0 1 .4 1 1 0 1.3.3 2.6.8 3.8.2.4.1.8-.2 1.1L6.6 10.8z"/>
-        </svg>
-        <span>Call Me</span>
-      </a>
+          <!-- Phone -->
+          <a href="tel:+7996049769" class="btn d-flex align-items-center gap-2 mb-3 btn-primary text-white">
+            <i class="bi bi-telephone-fill"></i> Call Me
+          </a>
 
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" class="flex items-center gap-3 bg-sky-600 text-white px-6 py-3 rounded-xl shadow-lg hover:scale-105 transition">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M20.45 20.45h-3.55v-5.4c0-1.3 0-3-1.85-3s-2.15 1.4-2.15 2.9v5.5H9.35V9h3.4v1.6h.1c.5-.9 1.7-1.9 3.5-1.9 3.75 0 4.45 2.5 4.45 5.7v6.1zM5.4 7.4a2.05 2.05 0 110-4.1 2.05 2.05 0 010 4.1zM7.2 20.45H3.6V9h3.6v11.45z"/>
-        </svg>
-        <span>LinkedIn</span>
-      </a>
-    </div>
+          <!-- LinkedIn -->
+          <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" class="btn d-flex align-items-center gap-2 mb-3 btn-info text-white">
+            <i class="bi bi-linkedin"></i> LinkedIn
+          </a>
+        </div>
+      </div>
 
-    <!-- Map & Address -->
-    <div class="flex-1 flex flex-col gap-4 animate-fadeInScale delay-[1s]">
-      <p class="text-gray-700 dark:text-gray-300 font-medium text-center lg:text-left text-lg">
-        📍HSR Layout Bangalore Karnataka India
-      </p>
-      <iframe
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.8895805881457!2d77.63335691524039!3d12.910953719741388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae15d087f8894f%3A0x60c9a608d048e2e2!2sHSR%20Layout%2C%20Bengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1693578200000!5m2!1sen!2sin"
-  width="100%" height="396"
-  style="border:0;"
-  allowfullscreen=""
-  loading="lazy"
-  referrerpolicy="no-referrer-when-downgrade">
-</iframe>
-
-
+      <!-- Map & Address -->
+      <div class="col-lg-6 animate-fadeInScale">
+        <p class="text-muted fw-semibold text-center text-lg-start mb-3">
+          📍 HSR Layout, Bangalore, Karnataka, India
+        </p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.8895805881457!2d77.63335691524039!3d12.910953719741388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae15d087f8894f%3A0x60c9a608d048e2e2!2sHSR%20Layout%2C%20Bengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1693578200000!5m2!1sen!2sin"
+          width="100%" height="350" class="rounded-4 shadow" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </div>
     </div>
   </div>
 </section>
 
+<!-- Bootstrap Icons CDN -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 <style>
 /* Animations */
-@keyframes fadeInUp { 0%{opacity:0;transform:translateY(40px);} 100%{opacity:1;transform:translateY(0);} }
-.animate-fadeInUp { animation: fadeInUp 0.8s ease forwards; }
+@keyframes fadeInUp {0%{opacity:0;transform:translateY(40px);}100%{opacity:1;transform:translateY(0);}}
+.animate-fadeInUp {animation: fadeInUp 0.8s ease forwards;}
 
-@keyframes fadeInScale { 0%{opacity:0;transform:scale(0.8);} 100%{opacity:1;transform:scale(1);} }
-.animate-fadeInScale { animation: fadeInScale 0.8s ease forwards; }
+@keyframes fadeInScale {0%{opacity:0;transform:scale(0.8);}100%{opacity:1;transform:scale(1);}}
+.animate-fadeInScale {animation: fadeInScale 0.8s ease forwards;}
 
-@keyframes float { 0%,100%{transform:translateY(0) scale(1);} 50%{transform:translateY(-20px) scale(1.05);} }
-.animate-float { animation: float 6s ease-in-out infinite; }
+@keyframes float {0%,100%{transform:translateY(0) scale(1);}50%{transform:translateY(-15px) scale(1.05);}}
+.blur {filter: blur(80px);}
 
-@keyframes bounceIn { 0%{transform:scale(0);opacity:0;} 60%{transform:scale(1.2);opacity:1;} 100%{transform:scale(1);} }
-.social-icon { animation: bounceIn 0.6s ease forwards; }
-.social-icon:nth-child(1){animation-delay:0.2s;}
-.social-icon:nth-child(2){animation-delay:0.4s;}
-.social-icon:nth-child(3){animation-delay:0.6s;}
-
-/* Social Icon styling */
+/* Social icons */
 .social-icon {
-  display:inline-flex;align-items:center;justify-content:center;
+  display:flex;align-items:center;justify-content:center;
   width:50px;height:50px;
-  background:#fff;color:#4f46e5;
+  background:#fff;color:#0d6efd;
   border-radius:50%;
-  transition:all 0.3s ease;
+  font-size:1.4rem;
+  transition:all .3s ease;
+  box-shadow:0 4px 12px rgba(0,0,0,0.1);
 }
 .social-icon:hover {
+  background:linear-gradient(135deg,#0d6efd,#6610f2);
+  color:#fff;
+  transform:translateY(-5px) scale(1.15);
+}
+
+/* Gradient Button */
+.btn-gradient {
   background:linear-gradient(135deg,#6366f1,#a78bfa);
   color:#fff;
-  transform:translateY(-5px) scale(1.2);
-  box-shadow:0 8px 20px rgba(0,0,0,0.2);
+  border:none;
+  transition:all .3s ease;
+}
+.btn-gradient:hover {
+  opacity:.9;
+  transform:scale(1.05);
 }
 </style>
