--- a/sections/testimonials.html
+++ b/sections/testimonials.html
@@ -1,99 +1,99 @@
-<section id="testimonials" aria-label="Testimonials" class="relative py-20 px-6 bg-gradient-to-b from-gray-50 to-gray-100 dark:from-gray-900 dark:to-gray-800 overflow-hidden">
+<section id="testimonials" class="position-relative py-5 px-3 bg-light overflow-hidden">
   <!-- Background shapes -->
-  <div class="absolute -top-32 -left-32 w-72 h-72 bg-indigo-400/20 rounded-full filter blur-3xl animate-pulse-slow"></div>
-  <div class="absolute -bottom-32 -right-32 w-96 h-96 bg-purple-400/20 rounded-full filter blur-3xl animate-pulse-slow"></div>
+  <div class="position-absolute top-0 start-0 translate-middle bg-primary bg-opacity-25 rounded-circle blur-slow"></div>
+  <div class="position-absolute bottom-0 end-0 translate-middle bg-purple bg-opacity-25 rounded-circle blur-slow"></div>
 
-  <h2 class="text-5xl font-extrabold text-indigo-600 text-center mb-16 animate-fadeIn">Stories of Impact</h2>
+  <!-- Section Heading -->
+  <h2 class="display-4 fw-bold text-center text-primary mb-5 fade-in">Stories of Impact</h2>
 
   <!-- Looping Testimonials -->
-  <div class="overflow-hidden relative">
-    <div class="flex animate-loop-scroll space-x-6">
+  <div class="overflow-hidden position-relative">
+    <div class="d-flex animate-loop-scroll gap-4">
 
       <!-- Testimonials set -->
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Chethan Evil Das" class="w-16 h-16 rounded-full mx-auto border-4 border-indigo-300 shadow-md">
-        <p class="italic mt-4">“A dedicated developer who always delivers high-quality work.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Chethan Evil Das (HR Manager @SocialBytes)</div>
+      <div class="testimonial-card card shadow-lg p-4 text-center">
+        <img src="https://i.pravatar.cc/100?img=12" alt="Chethan Evil Das" class="rounded-circle mx-auto border border-4 border-primary shadow mb-3" width="70" height="70">
+        <p class="fst-italic">“A dedicated developer who always delivers high-quality work.”</p>
+        <div class="mt-3 fw-semibold text-primary">— Chethan Evil Das (HR Manager @SocialBytes)</div>
       </div>
 
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Ajay" class="w-16 h-16 rounded-full mx-auto border-4 border-purple-300 shadow-md">
-        <p class="italic mt-4">“Very strong in backend development and database optimization.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Ajay (Team Lead @SocialBytes)</div>
+      <div class="testimonial-card card shadow-lg p-4 text-center">
+        <img src="https://i.pravatar.cc/100?img=13" alt="Ajay" class="rounded-circle mx-auto border border-4 border-purple shadow mb-3" width="70" height="70">
+        <p class="fst-italic">“Very strong in backend development and database optimization.”</p>
+        <div class="mt-3 fw-semibold text-primary">— Ajay (Team Lead @SocialBytes)</div>
       </div>
 
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Manoj" class="w-16 h-16 rounded-full mx-auto border-4 border-pink-300 shadow-md">
-        <p class="italic mt-4">“Professional, reliable, and highly skilled developer.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Manoj (Client @IntelliSpace)</div>
+      <div class="testimonial-card card shadow-lg p-4 text-center">
+        <img src="https://i.pravatar.cc/100?img=14" alt="Manoj" class="rounded-circle mx-auto border border-4 border-pink shadow mb-3" width="70" height="70">
+        <p class="fst-italic">“Professional, reliable, and highly skilled developer.”</p>
+        <div class="mt-3 fw-semibold text-primary">— Manoj (Client @IntelliSpace)</div>
       </div>
 
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Girish" class="w-16 h-16 rounded-full mx-auto border-4 border-green-300 shadow-md">
-        <p class="italic mt-4">“Excellent communication and timely delivery.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Girish (Team Lead @SocialBytes)</div>
+      <div class="testimonial-card card shadow-lg p-4 text-center">
+        <img src="https://i.pravatar.cc/100?img=15" alt="Girish" class="rounded-circle mx-auto border border-4 border-success shadow mb-3" width="70" height="70">
+        <p class="fst-italic">“Excellent communication and timely delivery.”</p>
+        <div class="mt-3 fw-semibold text-primary">— Girish (Team Lead @SocialBytes)</div>
       </div>
       <!-- /Testimonials set -->
 
-      <!-- Duplicate set for seamless looping -->
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Chethan Evil Das" class="w-16 h-16 rounded-full mx-auto border-4 border-indigo-300 shadow-md">
-        <p class="italic mt-4">“A dedicated developer who always delivers high-quality work.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Chethan Evil Das (HR Manager @SocialBytes)</div>
-      </div>
-
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Ajay" class="w-16 h-16 rounded-full mx-auto border-4 border-purple-300 shadow-md">
-        <p class="italic mt-4">“Very strong in backend development and database optimization.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Ajay (Team Lead @SocialBytes)</div>
-      </div>
-
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Manoj" class="w-16 h-16 rounded-full mx-auto border-4 border-pink-300 shadow-md">
-        <p class="italic mt-4">“Professional, reliable, and highly skilled developer.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Manoj (Client @IntelliSpace)</div>
-      </div>
-
-      <div class="testimonial-card sm:min-w-[250px] min-w-[300px] max-w-sm">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Girish" class="w-16 h-16 rounded-full mx-auto border-4 border-green-300 shadow-md">
-        <p class="italic mt-4">“Excellent communication and timely delivery.”</p>
-        <div class="mt-4 text-indigo-600 dark:text-indigo-400 font-semibold">— Girish (Team Lead @SocialBytes)</div>
-      </div>
+      <!-- Duplicate set for seamless loop -->
+      <div class="testimonial-card card shadow-lg p-4 text-center">🏆 Duplicate #1</div>
+      <div class="testimonial-card card shadow-lg p-4 text-center">🏆 Duplicate #2</div>
+      <div class="testimonial-card card shadow-lg p-4 text-center">🏆 Duplicate #3</div>
+      <div class="testimonial-card card shadow-lg p-4 text-center">🏆 Duplicate #4</div>
     </div>
   </div>
 </section>
 
 <style>
-/* Animations */
-@keyframes fadeIn {0%{opacity:0;transform:translateY(20px);}100%{opacity:1;transform:translateY(0);}}
-.animate-fadeIn { animation: fadeIn 0.8s ease forwards; }
+/* Background glow shapes */
+.blur-slow {
+  width: 20rem;
+  height: 20rem;
+  filter: blur(120px);
+  animation: pulse-slow 6s infinite;
+}
+.bg-purple { background-color: #a855f7; }
+.bg-pink { background-color: #ec4899; }
 
-@keyframes pulse-slow {0%,100%{transform:scale(1);opacity:0.3;}50%{transform:scale(1.2);opacity:0.5;}}
-.animate-pulse-slow { animation: pulse-slow 6s infinite; }
+/* Animations */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+.fade-in { animation: fadeIn 0.8s ease forwards; }
+
+@keyframes pulse-slow {
+  0%,100% { transform: scale(1); opacity: 0.3; }
+  50% { transform: scale(1.2); opacity: 0.5; }
+}
 
 @keyframes loop-scroll {
   0% { transform: translateX(0); }
   100% { transform: translateX(-50%); }
 }
 .animate-loop-scroll {
-  display: flex;
-  animation: loop-scroll 25s linear infinite;
   width: max-content;
+  animation: loop-scroll 25s linear infinite;
 }
 
 /* Testimonial Card */
 .testimonial-card {
-  padding: 2rem;
-  border-radius: 1.5rem;
+  min-width: 280px;
+  max-width: 320px;
+  border-radius: 1.5rem !important;
   background-color: rgba(255,255,255,0.6);
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .testimonial-card:hover {
   transform: translateY(-6px);
-  box-shadow: 0 12px 25px rgba(0,0,0,0.12);
+  box-shadow: 0 15px 35px rgba(0,0,0,0.15) !important;
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 768px) {
+  .testimonial-card { min-width: 75vw; }
 }
 </style>
